--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ no-dev-version = true
 [workspace]
 members = [
     ".",
-    "serialization-tests",
+#    "serialization-tests",
     "crates/*",
 ]
 
@@ -35,7 +35,6 @@ serde = { version = "1.0", default-features = false }
 funty = { version = "2.0", default-features = false }
 indexmap = { version = "1.9.3", default-features = false }
 hashbrown = { version = "0.13.2", default-features = false, features = ['ahash', 'inline-more'] }
-quickcheck = { version = "1.0", default-features = false }
 proptest = { version = "1.1.0", default-features = false }
 petgraph = { path = "." }
 petgraph-core = { path = "crates/core", default-features = false }
@@ -49,8 +48,6 @@ petgraph-generators = { path = "crates/generators", default-features = false }
 petgraph-proptest = { path = "crates/proptest", default-features = false }
 
 [dependencies]
-fixedbitset = { version = "0.4.0", default-features = false }
-indexmap = { version = "1.7", features = ["std"] }
 petgraph-adjacency-matrix = { workspace = true, optional = true, default-features = false }
 petgraph-core = { workspace = true, default-features = false }
 petgraph-csr = { workspace = true, optional = true, default-features = false }
@@ -58,9 +55,6 @@ petgraph-graph = { workspace = true, default-features = false }
 petgraph-matrix-graph = { workspace = true, optional = true, default-features = false }
 petgraph-algorithms = { workspace = true, default-features = false, features = ["remove-me-only-intended-for-move-graph"] }
 petgraph-generators = { workspace = true, default-features = false, optional = true }
-quickcheck = { optional = true, version = "0.8", default-features = false }
-serde = { version = "1.0", optional = true }
-serde_derive = { version = "1.0", optional = true }
 dot = { version = "0.1.4", optional = true }
 
 [dependencies.petgraph-graphmap]
@@ -82,7 +76,7 @@ csr = ["dep:petgraph-csr"]
 default = ["std", "graphmap", "stable-graph", "matrix-graph", "csr", "adjacency-matrix"]
 graphmap = ["dep:petgraph-graphmap"]
 matrix-graph = ["dep:petgraph-matrix-graph"]
-serde = ["dep:serde", "serde_derive"]
+serde = ["petgraph-graph/serde", "petgraph-graphmap?/serde"]
 stable-graph = ["petgraph-graph/stable"]
 dot = ["dep:dot"]
 unstable-generators = ["petgraph-generators"]
@@ -93,6 +87,7 @@ std = [
     "petgraph-graphmap?/std",
     "petgraph-csr?/std"
 ]
+proptest = ["petgraph-graph/proptest", "petgraph-graphmap?/proptest"]
 
 [lib]
 bench = false
