--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -22,6 +22,7 @@ rustc_version = "0.4.0"
 [dev-dependencies]
 petgraph-graph.workspace = true
 paste = "1.0.12"
+proptest = "1.1.0"
 
 [features]
 default = ["std"]
