--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -20,7 +20,7 @@ fixedbitset.workspace = true
 rustc_version = "0.4.0"
 
 [dev-dependencies]
-petgraph-graph.workspace = true
+petgraph-graph = { workspace = true, features = ['stable'] }
 paste = "1.0.12"
 proptest = "1.1.0"
 
