--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ defmac = "0.2.1"
 itertools = { version = "0.10.1", default-features = false }
 odds = { version = "0.4.0" }
 rand = "0.5.5"
+insta = "1.29.0"
 
 [features]
 adjacency-matrix = ["dep:petgraph-adjacency-matrix", "petgraph-algorithms/remove-me-only-intended-for-move-adjacency-matrix"]
