--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -25,6 +25,7 @@ petgraph = { workspace = true, default-features = true, features = ['proptest'] 
 petgraph-graph = { workspace = true, features = ['stable'] }
 paste = "1.0.12"
 proptest = "1.1.0"
+approx = "0.5.1"
 
 [features]
 default = ["std"]
