--- a/crates/proptest/Cargo.toml
+++ b/crates/proptest/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 petgraph-core = { workspace = true, features = ['alloc'] }
 proptest = { workspace = true, features = ['alloc'] }
+
+[dev-dependencies]
+petgraph-graph = { workspace = true, features = ['proptest'] }
