test: (WIP) port serialization (II)

--- a/crates/graph/Cargo.toml
+++ b/crates/graph/Cargo.toml
@@ -16,7 +16,8 @@ petgraph-proptest = { workspace = true, optional = true }
 # Used for documentation examples
 petgraph.workspace = true
 serde-value = "0.7.0"
-insta = { version = "1.29.0", features = ['serde', 'json'] }
+insta = { version = "1.29.0", features = ['serde', 'json', 'glob'] }
+serde_json = "1.0.96"
 
 [features]
 default = ["std", "stable"]
