--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -20,7 +20,7 @@ fixedbitset.workspace = true
 rustc_version = "0.4.0"
 
 [dev-dependencies]
-petgraph = { workspace = true, default-features = true, features = ['proptest'] }
+petgraph = { workspace = true, default-features = true, features = ['proptest', 'stable-graph'] }
 # petgraph is only available in integration tests, while we use petgraph-graph in unit tests
 petgraph-graph = { workspace = true, features = ['stable'] }
 petgraph-proptest = { workspace = true }
