--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ repository = "https://github.com/petgraph/petgraph"
 keywords = ["data-structure", "graph", "unionfind", "graph-algorithms"]
 categories = ["data-structures"]
 
+rust-version = "1.64"
+
 edition = "2018"
 
 [package.metadata.docs.rs]
@@ -36,7 +38,7 @@ debug = true
 
 [dependencies]
 fixedbitset = { version = "0.4.0", default-features = false }
-indexmap = { version = "1.7", features = ["std"] }
+indexmap = "2.0"
 quickcheck = { optional = true, version = "0.8", default-features = false }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
@@ -44,7 +46,7 @@ serde_derive = { version = "1.0", optional = true }
 [dev-dependencies]
 bincode = "1.3.3"
 defmac = "0.2.1"
-itertools = { version = "0.10.1", default-features = false }
+itertools = { version = "0.11.0", default-features = false }
 odds = { version = "0.4.0" }
 rand = "0.5.5"
 
