--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -27,6 +27,8 @@ petgraph-proptest = { workspace = true }
 paste = "1.0.12"
 proptest = "1.1.0"
 approx = "0.5.1"
+criterion = "0.5.1"
+rand = "0.8.5"
 
 [features]
 default = ["std"]
@@ -34,3 +36,7 @@ std = ["petgraph-core/std"]
 
 remove-me-only-intended-for-move-graph = ["dep:petgraph-graph"]
 remove-me-only-intended-for-move-adjacency-matrix = ["dep:petgraph-adjacency-matrix"]
+
+[[bench]]
+name = "bench"
+harness = false
