feat: bench k_shortest_path

--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -45,3 +45,11 @@ harness = false
 [[bench]]
 name = "bellman_ford"
 harness = false
+
+[[bench]]
+name = "floyd_warshall"
+harness = false
+
+[[bench]]
+name = "k_shortest_path_length"
+harness = false
