feat: initialize first sketch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,9 +31,10 @@ members = [
 fixedbitset = { version = "0.4", default-features = false }
 serde = { version = "1.0", default-features = false }
 funty = { version = "2.0", default-features = false }
-indexmap = { version = "1.9.3", default-features = false }
-hashbrown = { version = "0.13.2", default-features = false, features = ['ahash', 'inline-more'] }
+indexmap = { version = "2.0.0", default-features = false }
+hashbrown = { version = "0.14.0", default-features = false }
 proptest = { version = "1.1.0", default-features = false }
+error-stack = { version = "0.4.0", default-features = false }
 petgraph = { path = "." }
 petgraph-core = { path = "crates/core", default-features = false }
 petgraph-graph = { path = "crates/graph", default-features = false }
