feat: first implementation

--- a/crates/dino/Cargo.toml
+++ b/crates/dino/Cargo.toml
@@ -9,5 +9,6 @@ publish = false
 
 [dependencies]
 petgraph-core.workspace = true
+error-stack.workspace = true
 
 hashbrown = {workspace = true, features = ['ahash'] }
