feat: fully implement dino

--- a/crates/adjacency-matrix/Cargo.toml
+++ b/crates/adjacency-matrix/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [dependencies]
 fixedbitset.workspace = true
 funty.workspace = true
-petgraph-core = { workspace = true, features = ["alloc", "fixedbitset"] }
+petgraph-core = { workspace = true, features = ["alloc"] }
 
 [dev-dependencies]
 
