--- a/crates/graph/Cargo.toml
+++ b/crates/graph/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [dependencies]
 fixedbitset = { workspace = true }
 funty = { version = "2.0.0", default-features = false }
-petgraph-core = { workspace = true, features = ["alloc", "fixedbitset"] }
+petgraph-core = { workspace = true, features = ["alloc"] }
 serde = { workspace = true, optional = true, features = ["alloc", "derive"] }
 proptest = { workspace = true, optional = true }
 petgraph-proptest = { workspace = true, optional = true }
