--- a/crates/dino/Cargo.toml
+++ b/crates/dino/Cargo.toml
@@ -10,5 +10,6 @@ publish = false
 [dependencies]
 petgraph-core.workspace = true
 error-stack.workspace = true
+either = "1.9.0"
 
 hashbrown = {workspace = true, features = ['ahash'] }
