--- a/crates/dino/Cargo.toml
+++ b/crates/dino/Cargo.toml
@@ -12,5 +12,6 @@ petgraph-core.workspace = true
 error-stack.workspace = true
 either = "1.9.0"
 slab = "0.4.9"
+roaring = "0.10.2"
 
 hashbrown = {workspace = true, features = ['ahash'] }
