--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ petgraph-generators = { path = "crates/generators", default-features = false }
 petgraph-proptest = { path = "crates/proptest", default-features = false }
 petgraph-io = { path = "crates/io", default-features = false }
 petgraph-test-utils = { path = "crates/test-utils", default-features = false }
+petgraph-dino = { path = "crates/dino", default-features = false }
 
 [dependencies]
 petgraph-adjacency-matrix = { workspace = true, optional = true, default-features = false }
