feat: implement all deprecrecated traits

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-fixedbitset = { workspace = true }
+fixedbitset = { workspace = true, optional = true }
 funty.workspace = true
 indexmap = { workspace = true, optional = true }
 error-stack = { workspace = true }
