Simplified organization of Rayon-based parallel iterators in GraphMap.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ debug = true
 
 [dependencies]
 fixedbitset = { version = "0.4.0", default-features = false }
-indexmap = { version = "2.0", default-features = true }
+indexmap = "2.0"
 quickcheck = { optional = true, version = "0.8", default-features = false }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
