--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ indexmap = "2.0"
 quickcheck = { optional = true, version = "0.8", default-features = false }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
+rayon = { version = "1.5.3", optional = true }
 
 [dev-dependencies]
 bincode = "1.3.3"
@@ -51,9 +52,10 @@ odds = { version = "0.4.0" }
 rand = "0.5.5"
 
 [features]
+rayon = ["dep:rayon", "indexmap/rayon"]
 
 # feature flags for testing use only
-all = ["unstable", "quickcheck", "matrix_graph", "stable_graph", "graphmap"]
+all = ["unstable", "quickcheck", "matrix_graph", "stable_graph", "graphmap", "rayon"]
 default = ["graphmap", "stable_graph", "matrix_graph"]
 
 generate = [] # For unstable features
