--- a/crates/dino/Cargo.toml
+++ b/crates/dino/Cargo.toml
@@ -14,5 +14,6 @@ error-stack.workspace = true
 either = "1.9.0"
 roaring = "0.10.2"
 fnv = { version = "1.0.7", default-features = false }
+bitvec = "1.0.1"
 
 hashbrown = {workspace = true, features = ['ahash'] }
