--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -16,6 +16,8 @@ funty.workspace = true
 indexmap.workspace = true
 fxhash = "0.2.1"
 fixedbitset.workspace = true
+error-stack.workspace = true
+hashbrown = { workspace = true, features = ['ahash'] }
 
 [build-dependencies]
 rustc_version = "0.4.0"
@@ -33,7 +35,6 @@ rand = "0.8.5"
 petgraph-test-utils.workspace = true
 itertools = "0.10.5"
 num-traits = "0.2.17"
-hashbrown = {workspace = true, features = ['ahash']}
 
 [features]
 default = ["std"]
