feat(algorithms): it works?

--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 petgraph-core = { workspace = true, features = ["alloc"] }
-petgraph-graph = { workspace = true, optional = true }
-petgraph-adjacency-matrix = { workspace = true, optional = true }
+#petgraph-graph = { workspace = true, optional = true }
+#petgraph-adjacency-matrix = { workspace = true, optional = true }
 funty.workspace = true
 # Like `std::collection::HashMap`, `IndexMap` is built on top of `hashbrown`, but because
 # we're already using `IndexMap` in a lot of crates I do not want to pull in `hashbrown`
@@ -18,30 +18,32 @@ fxhash = "0.2.1"
 fixedbitset.workspace = true
 error-stack.workspace = true
 hashbrown = { workspace = true, features = ['ahash'] }
+num-traits = "0.2.17"
 
 [build-dependencies]
 rustc_version = "0.4.0"
 
 [dev-dependencies]
-petgraph = { workspace = true, default-features = true, features = ['proptest', 'stable-graph'] }
+#petgraph = { workspace = true, default-features = true, features = ['proptest', 'stable-graph'] }
 # petgraph is only available in integration tests, while we use petgraph-graph in unit tests
-petgraph-graph = { workspace = true, features = ['stable'] }
+#petgraph-graph = { workspace = true, features = ['stable'] }
+petgraph-dino = { workspace = true }
+petgraph-utils = { workspace = true }
 petgraph-proptest = { workspace = true }
 paste = "1.0.12"
 proptest = "1.1.0"
 approx = "0.5.1"
 criterion = "0.5.1"
 rand = "0.8.5"
-petgraph-test-utils.workspace = true
+#petgraph-test-utils.workspace = true
 itertools = "0.10.5"
-num-traits = "0.2.17"
 
 [features]
 default = ["std"]
 std = ["petgraph-core/std"]
 
-remove-me-only-intended-for-move-graph = ["dep:petgraph-graph"]
-remove-me-only-intended-for-move-adjacency-matrix = ["dep:petgraph-adjacency-matrix"]
+remove-me-only-intended-for-move-graph = []
+remove-me-only-intended-for-move-adjacency-matrix = []
 
 [[bench]]
 name = "shortest_paths"
