--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -19,6 +19,7 @@ fixedbitset.workspace = true
 error-stack.workspace = true
 hashbrown = { workspace = true, features = ['ahash'] }
 num-traits = "0.2.17"
+either = "1.9.0"
 
 [build-dependencies]
 rustc_version = "0.4.0"
