--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -39,6 +39,7 @@ rand = "0.8.5"
 #petgraph-test-utils.workspace = true
 itertools = "0.10.5"
 ordered-float = "4.1.1"
+serde_json = "1.0.107"
 
 [features]
 default = ["std"]
