--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -40,6 +40,7 @@ rand = "0.8.5"
 itertools = "0.10.5"
 ordered-float = "4.1.1"
 serde_json = "1.0.107"
+static_assertions = "1.1.0"
 
 [features]
 default = ["std"]
