feat(dino): try to make dijkstra faster

--- a/crates/dino/Cargo.toml
+++ b/crates/dino/Cargo.toml
@@ -10,6 +10,7 @@ petgraph-core = { workspace = true, features = ['alloc'] }
 error-stack.workspace = true
 
 either = "1.9.0" # TODO: potentially remove
+bitvec = "1.0.1"
 
 # Closures
 roaring = "0.10.2"
