--- a/crates/dino/Cargo.toml
+++ b/crates/dino/Cargo.toml
@@ -14,5 +14,6 @@ bitvec = "1.0.1"
 
 # Closures
 roaring = "0.10.2"
+croaring = "1.0.1"
 fnv = { version = "1.0.7", default-features = false }
 hashbrown = { workspace = true, features = ['ahash'] }
