feat(algorithms): force visit

--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -20,6 +20,7 @@ error-stack.workspace = true
 hashbrown = { workspace = true, features = ['ahash'] }
 num-traits = "0.2.17"
 either = "1.9.0"
+dary_heap = "0.3.6"
 
 [build-dependencies]
 rustc_version = "0.4.0"
