--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -20,6 +20,7 @@ error-stack.workspace = true
 hashbrown = { workspace = true, features = ['ahash'] }
 num-traits = "0.2.17"
 either = "1.9.0"
+ordered-float = { version = "4.2.0", optional = true }
 
 [build-dependencies]
 rustc_version = "0.4.0"
@@ -45,6 +46,7 @@ static_assertions = "1.1.0"
 [features]
 default = ["std"]
 std = ["petgraph-core/std"]
+ordered-float = ["dep:ordered-float"]
 
 remove-me-only-intended-for-move-graph = []
 remove-me-only-intended-for-move-adjacency-matrix = []
