--- a/crates/numi/Cargo.toml
+++ b/crates/numi/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ordered-float = { version = "4.2.0", optional = true }
+
+[dev-dependencies]
+static_assertions = "1.1.0"
+
+[features]
+ordered-float-impl = ["dep:ordered-float"]
