--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 petgraph-core = { workspace = true, features = ["alloc"] }
 #petgraph-graph = { workspace = true, optional = true }
 #petgraph-adjacency-matrix = { workspace = true, optional = true }
-funty.workspace = true
+numi = { workspace = true }
 # Like `std::collection::HashMap`, `IndexMap` is built on top of `hashbrown`, but because
 # we're already using `IndexMap` in a lot of crates I do not want to pull in `hashbrown`
 # separately as it would be another version to maintain. This way we only have one version.
@@ -18,7 +18,6 @@ fxhash = "0.2.1"
 fixedbitset.workspace = true
 error-stack.workspace = true
 hashbrown = { workspace = true, features = ['ahash'] }
-num-traits = "0.2.17"
 either = "1.9.0"
 
 [build-dependencies]
