feat(core): move `MaybeOwned` to `numi`

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
+numi = { workspace = true }
 fixedbitset = { workspace = true, optional = true }
 bitvec = "1.0.1"
 funty.workspace = true
