--- a/crates/dino/Cargo.toml
+++ b/crates/dino/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+numi = { workspace = true }
 petgraph-core = { workspace = true, features = ['alloc'] }
 error-stack.workspace = true
 
