--- a/crates/algorithms/Cargo.toml
+++ b/crates/algorithms/Cargo.toml
@@ -40,7 +40,9 @@ itertools = "0.10.5"
 ordered-float = "4.1.1"
 serde_json = "1.0.107"
 static_assertions = "1.1.0"
-snapbox = { version = "0.4.15", features = ["harness"] }
+snapbox = { version = "0.4.15" }
+libtest-mimic = "0.6.1"
+ignore = "0.4.21"
 
 [features]
 default = ["std"]
